internal endpoint to simulations
